--- a/congo/database/templates/database/test.html
+++ b/congo/database/templates/database/test.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
@@ -43,8 +42,8 @@
         <form style="float:left" action="" method="post">
         {% csrf_token %}
         {{ form.non_field_errors }}
-            <li style="width:15%; margin-top:3%;">{{ form.category }}</li>
-            <li style="margin-top:3%;">{{ form.search }} </li>
+            <li style="float:left; width:15%; margin-top:3%;">{{ form.category }}</li>
+            <li style="float:left; margin-top:3%;">{{ form.search }} </li>
         </form>
 
         {% if user.is_authenticated == 1 %}
@@ -65,9 +64,6 @@
           {% endif %}
     </ul>
 </div>
-
-    <!-- End Top Bar -->
-
 
     <div class="orbit" role="region" aria-label="Favorite Space Pictures" data-orbit>
       <ul class="orbit-container">
