--- a/congo/database/templates/database/base.html
+++ b/congo/database/templates/database/base.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
@@ -6,63 +7,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Congo</title>
     <link rel="stylesheet" href="http://dhbhdrzi4tiry.cloudfront.net/cdn/sites/foundation.min.css">
-      <style>
-         #nav {
-            height:10%;
-
-            background-color:#566377;
-            text-align:center;
-            list-style-type:none;
-         }
-         #nav li {
-            color:white;
-            margin-top:.7%;
-            float:left;
-         }
-
-         #nav a {
-            color:white;
-            text-decoration:none;
-         }
-
-    </style>
   </head>
   <body>
 
     <!-- Start Top Bar -->
-    <div id="nav">
-    <ul style="margin-left:8%;  text-align:center; display:inline-block; list-style-type:none; width:100%;" >
-        <li style="float:left; color: white; font-size:30px; font-family:'Julius Sans One';"><a href="http://localhost:8000">Congo</a></li>
-        <li style="margin-top:1.5%; padding: 0 2%;"><a href="http://localhost:8000/create_user/">Create Account</a></li>
-        <li style="margin-top:1.5%;"><a href="http://localhost:8000/create_supplier/">Create Supplier Account</a></li>
-        {% if user.is_authenticated == 1 %}
-        <li style="margin-top:1.5%; padding:0 2%;"><a href="http://localhost:8000/sell/">Register Item</a></li>
-        {% endif %}
-        <li style="margin-top:1%;">
-            <select>
-                {% for x in q %}
-                    <option value={{x.category_name}}>{{x.category_name}}</option>
-                {% endfor%}
-            </select>
-        </li>
-        <li style="margin-top:1%;">
-            <form action="/search_results/">
-                <input style="border:2px solid #ccc; border-radius 4px;" type="search" name="search" placeholder="Search our inventory...">
+    <div class="top-bar" style="background-color:#385723; align:left;">
+        <center>
+          <p style="text-align:center; color:white; font-size:40px; font-family:'Julius Sans One', sans-serif"><a href="http://localhost:8000/" style="color:white"><b>Congo</b></a></p>
+          <p style="  display:block;">
+            <form action="/search_results">
+              <input style="width:250px; border:2px solid #ccc; border-radius:4px; text-align:center;"type="search" name="search" placeholder="Search our inventory...">
             </form>
-        </li>
-        {% if user.is_authenticated == 1 %}
-            <li style="margin-top:1.5%; margin-left:2%;">
-                Welcome, {{ user.username }}
-            </li>
-        {% endif %}
+          </p>
+        </center>
+        <ul style="float:left; color: white;display:inline-block; background-color:rgba(38, 57, 23, .00); list-style-type:none; margin:0; padding:0; overflow:hidden;">
+          {% if user.is_authenticated == 1 %}
+          <li style="float:left; padding:12px 30px; display:block;"><b>Welcome, {{ user.username }}</b></li>
+          <li style="float:left; padding:12px 30px; display:block;"><a href="http://localhost:8000/" style="color:white;"/>Home</a></li>
+          <li style="float:left; padding:12px 30px; display:block;"><a onclick="validate();" style="color:white;">View Profile</a></li>
+          <li style="float:left; padding:12px 30px; display:block;"><a href="http://localhost:8000/logout/" style="color:white;"/>Logout</a></li>
+          {% else %}
+            <li style="float:left; padding:12px 30px; display:block;"><a style="color:white; margin-top:5px; border-style:solid; padding:8px"href="http://localhost:8000/login/"/>Login</a></li>
+          {% endif %}
+        </ul>
 
-        <li style="margin-top:1.5%; padding: 0 2%;"><a href="http://localhost:8000/">Home</a></li>
-        <li style="margin-top:1.5%;"><a onclick="validate();">View Profile</a></li>
-        {% if user.is_authenticated == 1 %}
-            <li style="float:left; margin-top:1.5%; margin-left:2%;"><a style="border-style:solid; border-radius:5px; padding:10px;"href="http://localhost:8000/logout/">Logout</a></li>
-        {% endif %}
-    </ul>
-</div>
+        <ul style="float:right; display:inline-block;background-color:rgba(38, 57, 23, .00); list-style-type:none; margin:0 padding:0;">
+                <!-- '/' only for localhost -->
+          <li style="padding:12px 30px; display:block; float:left"><a href="http://localhost:8000/create_user/" style="color:white;"/>Create Account</a></li>
+          <li style="padding:12px 30px; display:block; float:left"><a href="http://localhost:8000/create_supplier/" style="color:white;"/>Create Supplier Account</a></li>
+          {% if user.is_authenticated == 1 %}
+          <li style="padding:12px 30px; display:block; color:white; float:left;"><a style="color:white; margin-top:5px; border-style:solid; padding:8px"href="http://localhost:8000/sell/"/>Register Sale Item</a></li>
+          {% endif %}
+        </ul>
+    </div>
 {% block content %}
 {% endblock %}
 
@@ -102,6 +79,5 @@
       window.location.href="http://localhost:8000/u/"+username+"/";
       }
   </script>
-
   </body>
 </html>
