--- a/congo/database/templates/database/test.html
+++ b/congo/database/templates/database/test.html
@@ -263,23 +263,24 @@
     <div class="callout large secondary">
       <div class="row">
         <div class="large-4 columns">
-          <h5>Vivamus Hendrerit Arcu Sed Erat Molestie</h5>
-          <p>Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit.</p>
+          <h5>Welcome to Congo!</h5>
+          <p style="margin:0">123 River Lane, Jackson, Mississippi, USA 39200 </p>
+          <p style="margin:0">congo@Congo.com </p>
         </div>
         <div class="large-3 large-offset-2 columns">
           <ul class="menu vertical">
-            <li><a href="#">One</a></li>
-            <li><a href="#">Two</a></li>
-            <li><a href="#">Three</a></li>
-            <li><a href="#">Four</a></li>
+            <li><a href="#">Contact us:</a></li>
+            <li><a href="#">Apply for a job: </a></li>
+            <li><a href="#">Customer Service:</a></li>
+            <li><a href="#">Philanthropy:</a></li>
           </ul>
         </div>
         <div class="large-3 columns">
           <ul class="menu vertical">
-            <li><a href="#">One</a></li>
-            <li><a href="#">Two</a></li>
-            <li><a href="#">Three</a></li>
-            <li><a href="#">Four</a></li>
+            <li><a href="#">contact@Congo.com</a></li>
+            <li><a href="#">jobs@Congo.com</a></li>
+            <li><a href="#">customerservice@Congo.com</a></li>
+            <li><a href="#">philanthropy@Congo.com</a></li>
           </ul>
         </div>
       </div>
