Formatting changes on User Profile Pages

--- a/congo/database/templates/database/user_profile.html
+++ b/congo/database/templates/database/user_profile.html
@@ -12,7 +12,7 @@
     <li style="float:left; padding:10px"><a href="http://localhost:8000/u/{{registered_user.user.username}}/create_user_list/" />Add List</a></li>
     <li style="float:left; padding:10px"><a href="http://localhost:8000/u/{{registered_user.user.username}}/view_list/" />View Lists</a></li>
     <li style="float:left; padding:10px"><a href="http://localhost:8000/u/{{registered_user.user.username}}/order_history/" />View Previous Orders</a></li>
-
+comment
 </ul>-->
 
 <ul style="background-color:#566377;border-color:gray;border-style:solid; list-style-type:none; border-width:.5px; width:56%; height:30px; margin:0 Auto; padding:5px; margin-top:0%; margin-bottom:0%; border-radius:0px">
