--- a/congo/database/templates/database/test.html
+++ b/congo/database/templates/database/test.html
@@ -85,7 +85,7 @@
           <img src="http://i.imgur.com/JD6y7G5.jpg">
         </li>
         <li class="orbit-slide">
-          <img src="http://overbyinkjetsolutions-com.3dcartstores.com/assets/images/Winter%20Parts%20Sale.jpg">
+          <img src="http://i.imgur.com/w89fmqd.jpg">
         </li>
         <li class="orbit-slide">
           <img src="https://unfade.io/wp-content/uploads/2017/02/holiday-season-unfade-season-2000x750.jpeg">
