--- a/congo/database/templates/database/create_supplier.html
+++ b/congo/database/templates/database/create_supplier.html
@@ -3,6 +3,8 @@
 {% block content %}
 <form method="post" class="post-form" style="border-color:gray; border-style:solid; border-width:.5px; width:30%; margin:0 auto; padding:30px; margin-top:5%; margin-bottom:5%; border-radius:10px;" >{% csrf_token %}
     {{form.as_p}}
-    <button style="border-radius:5px; margin:0 35%; padding: 10px 10px; background-color:#566377; border:none; color:white;">Submit</button>
+    <div style="text-align:center">
+    <button style="border-radius:5px;  padding: 10px 10px; background-color:#566377; border:none; color:white;">Submit</button>
+    </div>
 </form>
 {% endblock content %}
