--- a/congo/database/templates/items/upload_item.html
+++ b/congo/database/templates/items/upload_item.html
@@ -3,7 +3,9 @@
 {% block content%}
 <form method="post" class="post-form" style="border-color:gray;border-style:solid; border-width:.5px; width:30%; margin:0 auto; padding:3%; margin-top:5%; margin-bottom:5%; border-radius:10px;">{% csrf_token %}
     {{form.as_p}}
-    <button style="border-radius:5px; margin: 0 auto; padding: 5% 5%; background-color:#566377; border:none; color:white;">Continue</button>
+    <div style="text-align:center;">
+    <button style="border-radius:5px;  margin: 0 auto; padding: 5% 5%; background-color:#566377; border:none; color:white;">Submit</button>
+    </div>
 </form>
 
 
