--- a/congo/database/templates/database/supplier_profile.html
+++ b/congo/database/templates/database/supplier_profile.html
@@ -1,6 +1,10 @@
 {% extends 'database/base.html' %}
 {% block content %}
+
 <form method="post">
+    <br>
+<center>
+    <h><font size="5">Supplier Overview</font></h>
     <table>
         <tr>
             <td>Company Name</td>
@@ -27,5 +31,6 @@
             <td><strong>{{ supplier.revenue }}</strong></td>
         </tr>
     </table>
+</center>
 </form>
 {% endblock content %}
