--- a/congo/database/templates/items/upload_fail.html
+++ b/congo/database/templates/items/upload_fail.html
@@ -1,8 +1,10 @@
 {% extends "database/base.html" %}
 
 {% block content%}
-<p>upload failed :(</p>
-
+<div>
+<br>
+    <p><font size="5";>Upload failed :( </font></p>
+</div>
 
 
 
