--- a/congo/database/templates/items/upload_success.html
+++ b/congo/database/templates/items/upload_success.html
@@ -1,9 +1,12 @@
 {% extends "database/base.html" %}
 
 {% block content%}
-<p>upload successful!!!</p>
+<div>
+    <br>
+    <p><font size="5";>Upload successful!</font></p>
 
 
+</div>
 
 
 {% endblock content %}
