--- a/congo/database/templates/database/base.html
+++ b/congo/database/templates/database/base.html
@@ -11,34 +11,41 @@
   <body>
 
     <!-- Start Top Bar -->
-    <div class="top-bar" style="background-color:#566377; align:left;">
-        <center>
-          <p style="text-align:center; color:white; font-size:40px; font-family:'Julius Sans One', sans-serif"><a href="http://localhost:8000/" style="color:white"><b>Congo</b></a></p>
-          <p style="  display:block;">
-            <form action="/search_results">
-              <input style="width:250px; border:2px solid #ccc; border-radius:4px; text-align:center;"type="search" name="search" placeholder="Search our inventory...">
-            </form>
-          </p>
-        </center>
-        <ul style="float:left; color: white;display:inline-block; background-color:rgba(38, 57, 23, .00); list-style-type:none; margin:0; padding:0; overflow:hidden;">
-          {% if user.is_authenticated == 1 %}
-          <li style="float:left; padding:12px 30px; display:block;"><b>Welcome, {{ user.username }}</b></li>
-          <li style="float:left; padding:12px 30px; display:block;"><a href="http://localhost:8000/" style="color:white;"/>Home</a></li>
-          <li style="float:left; padding:12px 30px; display:block;"><a onclick="validate();" style="color:white;">View Profile</a></li>
-          <li style="float:left; padding:12px 30px; display:block;"><a href="http://localhost:8000/logout/" style="color:white;"/>Logout</a></li>
-          {% else %}
-            <li style="float:left; padding:12px 30px; display:block;"><a style="color:white; margin-top:5px; border-style:solid; padding:8px"href="http://localhost:8000/login/"/>Login</a></li>
-          {% endif %}
-        </ul>
+    <div class="top-bar" style="background-color:#566377">
+          <h1 style="position:absolute; left:50%; top: 10px; transform:translate(-54%,0);color:white; font-size:40px; font-family:'Julius Sans One', sans-serif"><a href="http://localhost:8000/" style="color:white"><b>Congo</b></a></h1>
+            <h1 style=" position:absolute; margin-left:auto; margin-right: auto; left:50%; top: 95px;transform:translate(-50%, 0%);">
+                <form action="/search_results">
+                    <input style="width:250px; border:2px solid #ccc; border-radius:4px; text-align:center;"type="search" name="search" placeholder="Search our inventory...">
+                </form>
+            </h1>
+        <br>
+        <br>
+        <br>
+        <div>
+        <div style="float:left; color: white; background-color:rgba(38, 57, 23, .00); ">
+            <ul style="list-style-type:none;">
+                {% if user.is_authenticated == 1 %}
+                <li style="float:left; padding:20px 30px; display:block;"><b>Welcome, {{ user.username }}</b></li>
+                <li style="float:left; padding:20px 30px; display:block;"><a href="http://localhost:8000/" style="color:white;"/>Home</a></li>
+                    <li style="float:left; padding:20px 30px; display:block;"><a onclick="validate();" style="color:white;">View Profile</a></li>
+                    <li style="float:left; padding:20px 30px; display:block;"><a href="http://localhost:8000/logout/" style="color:white;"/>Logout</a></li>
+                    {% else %}
+                    <li style="float:left; padding:20px 30px; display:block;"><a style="color:white; margin-top:5px; border-style:solid; padding:8px"href="http://localhost:8000/login/"/>Login</a></li>
+                    {% endif %}
+                </ul>
+            </div>
 
-        <ul style="float:right; display:inline-block;background-color:rgba(38, 57, 23, .00); list-style-type:none; margin:0 padding:0;">
+
+            <ul style="list-style-type:none; float:right; text-align:right;display:inline-block;background-color:rgba(38, 57, 23, .00); ">
                 <!-- '/' only for localhost -->
-          <li style="padding:12px 30px; display:block; float:left"><a href="http://localhost:8000/create_user/" style="color:white;"/>Create Account</a></li>
-          <li style="padding:12px 30px; display:block; float:left"><a href="http://localhost:8000/create_supplier/" style="color:white;"/>Create Supplier Account</a></li>
-          {% if user.is_authenticated == 1 %}
-          <li style="padding:12px 30px; display:block; color:white; float:left;"><a style="color:white; margin-top:5px; border-style:solid; padding:8px"href="http://localhost:8000/sell/"/>Register Sale Item</a></li>
-          {% endif %}
-        </ul>
+                <li style="padding:20px 20px; display:block; float:left"><a href="http://localhost:8000/create_user/" style="color:white;"/>Create Account</a></li>
+                <li style="padding:20px 20px; display:block; float:left"><a href="http://localhost:8000/create_supplier/" style="color:white;"/>Create Supplier Account</a></li>
+                {% if user.is_authenticated == 1 %}
+                <li style="padding:20px 30px; display:block; color:white; float:left;"><a style="color:white; margin-top:5px; border-style:solid; padding:8px"href="http://localhost:8000/sell/"/>Register Sale Item</a></li>
+                {% endif %}
+            </ul>
+        </div>
+
     </div>
 {% block content %}
 {% endblock %}
