--- a/congo/database/templates/database/test.html
+++ b/congo/database/templates/database/test.html
@@ -106,7 +106,9 @@
     <div class="row small-up-2 large-up-4">
       {% for x in newitems %}
       <div class="column">
-        <img class="thumbnail" src="http://placehold.it/300x400">
+        <div style="height:400px; width:275px;">
+        <img style="width:100%; height:100%; object-fit:cover; overflow:hidden;"class="thumbnail" src={{x.image_url}}>
+        </div>
         <h5>{{x.item_name}}</h5>
         {% if x.item_id.type == 'A' %}
         <p>Auction</p>
@@ -144,7 +146,9 @@
     <div class="row small-up-2 medium-up-3 large-up-6">
       {% for x in neatproducts %}
       <div class="column">
-        <img class="thumbnail" src="http://placehold.it/300x400">
+        <div style="width:175px; height:250px;">
+        <img style="width:100%; height:100%; object-fit:cover; overflow:hidden;"class="thumbnail" src={{x.image_url}}>
+        </div>
         
         <h5 style="">{{x.item_name}}</h5>
         {% if x.item_id.type == 'A' %}
@@ -166,7 +170,9 @@
         {% for x in topproducts1 %}
         <div class="media-object">
           <div class="media-object-section">
-            <img class="thumbnail" src="http://placehold.it/100x100">
+              <div style="width:100px; height:100px;">
+            <img style="width:100%; height:100%; object-fit:cover; overflow:hidden;"class="thumbnail" src={{x.image_url}}>
+        </div>
           </div>
           <div class="media-object-section">
             <h5><a href="http://localhost:8000/items/{{x.item_id}}">{{x.item_name}}</a></h5>
@@ -208,23 +214,23 @@
     <div class="callout large secondary">
       <div class="row">
         <div class="large-4 columns">
-          <h5>Vivamus Hendrerit Arcu Sed Erat Molestie</h5>
-          <p>Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit.</p>
+          <h5>Congo</h5>
+          <p>Welcome! Thank you for visiting us at Congo.com! 123 River Lane, Jackson, Mississippi, 39200</p>
         </div>
         <div class="large-3 large-offset-2 columns">
           <ul class="menu vertical">
-            <li><a href="#">One</a></li>
-            <li><a href="#">Two</a></li>
-            <li><a href="#">Three</a></li>
-            <li><a href="#">Four</a></li>
+            <li><a href="#">Contact Us:</a></li>
+            <li><a href="#">Philanthropy:</a></li>
+            <li><a href="#">Apply for a job:</a></li>
+            <li><a href="#">Customer Service:</a></li>
           </ul>
         </div>
         <div class="large-3 columns">
           <ul class="menu vertical">
-            <li><a href="#">One</a></li>
-            <li><a href="#">Two</a></li>
-            <li><a href="#">Three</a></li>
-            <li><a href="#">Four</a></li>
+            <li><a href="#">contact@congo.com</a></li>
+            <li><a href="#">philanthropy@congo.com</a></li>
+            <li><a href="#">jobs@congo.com</a></li>
+            <li><a href="#">customerservice@congo.com</a></li>
           </ul>
         </div>
       </div>
