--- a/congo/database/templates/database/user_profile.html
+++ b/congo/database/templates/database/user_profile.html
@@ -82,10 +82,10 @@ comment
 
 {% for i in items %}
 <p>&nbsp</p>
-    <table style="margin: 0 auto;">
+    <table style="margin: 0 auto; width:50%;">
         <tr>
             <td>Name</td>
-            <td><strong>{{ i.item_name }}</strong></td>
+            <td><strong><a href="http://localhost:8000/items/{{i.item_id}}">{{ i.item_name }}</a></strong></td>
         </tr>
         <tr>
             <td>ID</td>
@@ -108,10 +108,7 @@ comment
             <td>Amount in Stock</td>
             <td><strong>{{ i.amount_in_stock }}</strong></td>
         </tr>
-        <tr>
-            <td></td>
-            <td><a href="http://localhost:8000/items/{{i.item_id.item_id}}/"/>Item Link</a></td>
-        </tr>
+
         {% if i.amount_in_stock == 0 %}
         <tr>
             <td></td>
@@ -143,7 +140,9 @@ comment
 
 {% endif %}
 
+
 {% for i in reviews %}
+
     <p>&nbsp</p>
     <table style="margin:0 auto; width:30%; border-style:solid; text-align:center">
         <tr>
@@ -173,8 +172,10 @@ comment
 
             <div style="width:50%; margin:0 auto;">
                 <div>
-                    <img style="width:125px; height:174;float:left; padding:20px" src="https://ss7.vzw.com/is/image/VerizonWireless/iphone6s-spgry-front?fmt=jpg&bgc=f6f6f6&resmode=sharp2&qlt=80,1&wid=352&hei=717">
-                    <p>&nbsp</p>
+                    <div style="float:left; width:170px; height:200px;">
+                    <img style="width:100%; height:100%; object-fit:cover; overflow:hidden; float:left; padding:20px" src={{x.image_url}}>
+                    </div>
+                    <p style="margin:0">&nbsp</p>
                     <strong><a href="http://localhost:8000/items/{{x.item_id}}">{{x.item_name}}</a> - </strong>{{x.description}}
                     {% if x.item_id.type == 'A' %}
                         <strong>(Auction)</strong>
